--- a/TODO.txt
+++ b/TODO.txt
@@ -17,22 +17,23 @@ miscellaneous
 TIMELINE:
     --merge repos ♥ (abd)
     
-    --login minor additions/changes in website (sala)  
-    --login minor additions/changes in extension (abd) ◄
+    --login minor additions/changes in website (sala)
+    --login minor additions/changes in extension (abd)
     --login and user profile backend (sala koshish kray ga)
-    
-    --repos merge (abd)
-    --backend login, logout functionality (abd)
-    --profile page frontend (shera)
-    --profile page get user backend 
-    
-    (getcredits, addcredits):
-    --CREDITS system frontend
-    --CREDITS system  backend
-
     --PAYMENT
         payment api etc (probably stripe)
     
-    
-b
-  
+    --CREDITS system
+
+    BACKEND SETUP:
+        --Setup server (Express.js)
+        --Database setup (MongoDB)
+        --Create models (User, Payment, etc.)
+        --Setup routes
+            --Auth routes (Login, Register, Logout)
+            --User routes (Get profile, Update profile)
+            --Payment routes (Initiate payment, Verify payment)
+        --Setup controllers for each route
+        --Implement middleware for authentication and error handling
+        --Setup environment variables
+        --Test endpoints with Postman
