--- a/TODO.txt
+++ b/TODO.txt
@@ -19,30 +19,22 @@ TIMELINE:
     
     --login minor additions/changes in website (abd) ☻
     --dashboard big work heavy lifting (sala) ☻
-    --login minor additions/changes in extension (abd) 
+    --login minor additions/changes in extension (abd) ☻
     --login and user profile backend (sala) ☻
 
     --PAYMENT
-    --payment api etc (probably stripe/paddle) (abd)
+    --payment api etc (/paddle) (abd) ☻
     
-    --CREDITS system
-    --backend functions (sala)
-       --add credits (googleID)
-       --get credits
+
     --credits displaying on frontend (abd)
+    
+    --add products to paddle dashboard 
+        
+    --buy credits button(s) frontend (sala)
+        --DashboardPage Card1.js Card2.js Card3.js
+    --frontend successful transaction callback (sala koshish)
+        --App.js (to start make a temporary backend function)
+    --backend successful transaction api (abd)
+        --paymentRoutes.js
+    --deduct credits on query from extension (abd)
 
-    --buy credits button(s)
-
-    --deduct credits on query from extension 
-    BACKEND SETUP:
-        --Setup server (Express.js)
-        --Database setup (MongoDB)
-        --Create models (User, Payment, etc.)
-        --Setup routes
-            --Auth routes (Login, Register, Logout)
-            --User routes (Get profile, Update profile)
-            --Payment routes (Initiate payment, Verify payment)
-        --Setup controllers for each route
-        --Implement middleware for authentication and error handling
-        --Setup environment variables
-        --Test endpoints with Postman
